Fixed metaoverlay z-index vs. galleryImageButtons (fixed second layer issue)

--- a/src/scss/auto-imports/_basic/variables.scss
+++ b/src/scss/auto-imports/_basic/variables.scss
@@ -8,10 +8,10 @@ $z-index-live-image: 1;
 $z-index-navigation: 2;
 $z-index-overlay-buttons: 2;
 $z-index-gallery-image-buttons: 2;
-$z-index-gallery-header-sticky: 3;
 $z-index-overlay: 3;
 $z-index-meta-pre: 4;
 $z-index-overlay-box: 4;
+$z-index-gallery-header-sticky: 5;
 
 $default-border-radius: 5px;
 $default-border-radius-small: 2px;
